# HarMoCAP

./: .backupignore  .gitignore  AGENTS.md  BITACORA.md  README.md  pyproject.toml
Biblioteca/: INDEX.md  Metrcias_de_train.md
Biblioteca/arquitectura-harmocap-h4/: README.md  arquitectura-harmocap-h4.md
Biblioteca/beacon-ecosystem-orchestration/: GOALS.md  ORCHESTRATION.md  README.md
Biblioteca/crowd-counting-densidad/: README.md
Biblioteca/evaluacion-freemocap/: README.md
Biblioteca/rearquitectura-ecosistema-beacon/: README.md  (+3 more)
configs/: dataset_mixed_ft2.yaml  features.yaml  identity.yaml  model.yaml  osc.yaml  smoothing.yaml  tracker_group.yaml  train_ft1.yaml  train_ft2.yaml
docs/: DATASET_ROADMAP.md  INTERFACE_SPEC.md  MANUAL_DE_USO.md
examples/: session_v1.jsonl
harmocap-nico-kit/: FEATURES.md  INTERFACE_SPEC.md  LICENSE  THIRD_PARTY_NOTICES  VERSION  contract_id.golden  movement_frame.v1.schema.json  osc_codec.py  osc_contract.v1.json  osc_receiver_example.py  replay.py  selftest.py
reports/: CURRENT_RUN
schemas/: contract_id.golden  movement_frame.v1.schema.json  osc_contract.v1.json
scripts/: build_nico_kit.py  compare_models.py  eval_tracking.py  export_density.py  export_model.py  fetch_models.py  make_synthetic_session.py  record_session.py  render_density.py  render_slots.py  render_videos.py  run_realtime.py  scan_checkpoints.py  sweep_inference.py  train_finetune.py  validate_workflow.py  webapp.py
tests/: test_crowd.py  test_density.py  test_features.py  test_identity.py  test_kit_isolation.py  test_schema_osc.py  test_smoothing.py
(+79 files in other folders)
